--- a/MyGame/MyGame.vcxproj.filters
+++ b/MyGame/MyGame.vcxproj.filters
@@ -223,6 +223,12 @@
     <ClCompile Include="Title.cpp">
       <Filter>Scene</Filter>
     </ClCompile>
+    <ClCompile Include="SceneManager.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="SceneFactory.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\shaders\FBX.hlsli">
@@ -400,5 +406,9 @@
     <ClInclude Include="Title.h">
       <Filter>Scene</Filter>
     </ClInclude>
+    <ClInclude Include="BaseScene.h" />
+    <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="AbstractSceneFactory.h" />
+    <ClInclude Include="SceneFactory.h" />
   </ItemGroup>
 </Project>
