--- a/MyGame/MyGame.vcxproj
+++ b/MyGame/MyGame.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="Collider\CollisionPrimitive.cpp" />
     <ClCompile Include="Collider\SphereCollider.cpp" />
     <ClCompile Include="DebugText\DebugText.cpp" />
+    <ClCompile Include="StageObject\LargeRock.cpp" />
     <ClCompile Include="Math\Easing.cpp" />
     <ClCompile Include="EngineBase\DirectXCommon.cpp" />
     <ClCompile Include="EngineBase\WinApp.cpp" />
@@ -184,6 +185,7 @@
     <ClCompile Include="OBJ\ObjModel.cpp" />
     <ClCompile Include="OBJ\ObjObject.cpp" />
     <ClCompile Include="Particle\ParticleManager.cpp" />
+    <ClCompile Include="StageObject\Planet.cpp" />
     <ClCompile Include="Player\Player.cpp" />
     <ClCompile Include="PostEffect\PostEffect.cpp" />
     <ClCompile Include="Result\Result.cpp" />
@@ -193,7 +195,7 @@
     <ClCompile Include="Sound\Sound.cpp" />
     <ClCompile Include="Math\Spline.cpp" />
     <ClCompile Include="Sprite\Sprite.cpp" />
-    <ClCompile Include="StageObject\StageObject.cpp" />
+    <ClCompile Include="StageObject\SmallRock.cpp" />
     <ClCompile Include="Title\Title.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -287,6 +289,7 @@
     <ClInclude Include="Collider\RaycastHit.h" />
     <ClInclude Include="Collider\SphereCollider.h" />
     <ClInclude Include="DebugText\DebugText.h" />
+    <ClInclude Include="StageObject\LargeRock.h" />
     <ClInclude Include="Math\Easing.h" />
     <ClInclude Include="EngineBase\DirectXCommon.h" />
     <ClInclude Include="EngineBase\SafeDelete.h" />
@@ -305,6 +308,7 @@
     <ClInclude Include="OBJ\ObjModel.h" />
     <ClInclude Include="OBJ\ObjObject.h" />
     <ClInclude Include="Particle\ParticleManager.h" />
+    <ClInclude Include="StageObject\Planet.h" />
     <ClInclude Include="Player\Player.h" />
     <ClInclude Include="PostEffect\PostEffect.h" />
     <ClInclude Include="Result\Result.h" />
@@ -314,7 +318,7 @@
     <ClInclude Include="Sound\Sound.h" />
     <ClInclude Include="Math\Spline.h" />
     <ClInclude Include="Sprite\Sprite.h" />
-    <ClInclude Include="StageObject\StageObject.h" />
+    <ClInclude Include="StageObject\SmallRock.h" />
     <ClInclude Include="Title\Title.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
