--- a/MyGame/MyGame.vcxproj
+++ b/MyGame/MyGame.vcxproj
@@ -121,7 +121,7 @@
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
-      <AdditionalIncludeDirectories>$(ProjectDir)FBX;$(ProjectDir)OBJ;$(ProjectDir)Particle;$(ProjectDir)PostEffect;$(ProjectDir)Sound;$(ProjectDir)Input;$(ProjectDir)Camera;$(ProjectDir)Sprite;$(ProjectDir)DebugText;$(ProjectDir)EngineBase;$(ProjectDir)GamePlay;$(ProjectDir)GameBase;$(ProjectDir)Math;$(ProjectDir)ScoreText;$(ProjectDir)Boss;$(ProjectDir)Bullet;$(ProjectDir)StageObject;$(ProjectDir)Player;$(ProjectDir)Title;$(ProjectDir)Result;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)FBX;$(ProjectDir)OBJ;$(ProjectDir)Particle;$(ProjectDir)PostEffect;$(ProjectDir)Sound;$(ProjectDir)Input;$(ProjectDir)Camera;$(ProjectDir)Sprite;$(ProjectDir)DebugText;$(ProjectDir)EngineBase;$(ProjectDir)GamePlay;$(ProjectDir)GameBase;$(ProjectDir)Math;$(ProjectDir)ScoreText;$(ProjectDir)Boss;$(ProjectDir)Bullet;$(ProjectDir)StageObject;$(ProjectDir)Player;$(ProjectDir)Title;$(ProjectDir)Result;$(ProjectDir)ScoreManager;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <TreatWarningAsError>false</TreatWarningAsError>
     </ClCompile>
@@ -142,7 +142,7 @@
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <AdditionalIncludeDirectories>$(ProjectDir)FBX;$(ProjectDir)OBJ;$(ProjectDir)Particle;$(ProjectDir)PostEffect;$(ProjectDir)Sound;$(ProjectDir)Input;$(ProjectDir)Camera;$(ProjectDir)Sprite;$(ProjectDir)DebugText;$(ProjectDir)EngineBase;$(ProjectDir)GamePlay;$(ProjectDir)GameBase;$(ProjectDir)Math;$(ProjectDir)ScoreText;$(ProjectDir)Boss;$(ProjectDir)Bullet;$(ProjectDir)StageObject;$(ProjectDir)Player;$(ProjectDir)Title;$(ProjectDir)Result;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)FBX;$(ProjectDir)OBJ;$(ProjectDir)Particle;$(ProjectDir)PostEffect;$(ProjectDir)Sound;$(ProjectDir)Input;$(ProjectDir)Camera;$(ProjectDir)Sprite;$(ProjectDir)DebugText;$(ProjectDir)EngineBase;$(ProjectDir)GamePlay;$(ProjectDir)GameBase;$(ProjectDir)Math;$(ProjectDir)ScoreText;$(ProjectDir)Boss;$(ProjectDir)Bullet;$(ProjectDir)StageObject;$(ProjectDir)Player;$(ProjectDir)Title;$(ProjectDir)Result;$(ProjectDir)ScoreManager;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <TreatWarningAsError>false</TreatWarningAsError>
     </ClCompile>
@@ -166,6 +166,7 @@
     <ClCompile Include="Collider\CollisionPrimitive.cpp" />
     <ClCompile Include="Collider\SphereCollider.cpp" />
     <ClCompile Include="DebugText\DebugText.cpp" />
+    <ClCompile Include="ScoreManager\ScoreManager.cpp" />
     <ClCompile Include="StageObject\LargeRock.cpp" />
     <ClCompile Include="Math\Easing.cpp" />
     <ClCompile Include="EngineBase\DirectXCommon.cpp" />
@@ -197,6 +198,7 @@
     <ClCompile Include="Sprite\Sprite.cpp" />
     <ClCompile Include="StageObject\SmallRock.cpp" />
     <ClCompile Include="Title\Title.cpp" />
+    <ClCompile Include="VolumeManager\VolumeManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\shaders\FBX.hlsli" />
@@ -289,6 +291,7 @@
     <ClInclude Include="Collider\RaycastHit.h" />
     <ClInclude Include="Collider\SphereCollider.h" />
     <ClInclude Include="DebugText\DebugText.h" />
+    <ClInclude Include="ScoreManager\ScoreManager.h" />
     <ClInclude Include="StageObject\LargeRock.h" />
     <ClInclude Include="Math\Easing.h" />
     <ClInclude Include="EngineBase\DirectXCommon.h" />
@@ -320,6 +323,7 @@
     <ClInclude Include="Sprite\Sprite.h" />
     <ClInclude Include="StageObject\SmallRock.h" />
     <ClInclude Include="Title\Title.h" />
+    <ClInclude Include="VolumeManager\VolumeManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
