--- a/MyGame/MyGame.vcxproj.filters
+++ b/MyGame/MyGame.vcxproj.filters
@@ -250,6 +250,9 @@
     <ClCompile Include="VolumeManager\VolumeManager.cpp">
       <Filter>VolumeManager</Filter>
     </ClCompile>
+    <ClCompile Include="BossParts.cpp">
+      <Filter>Boss</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\shaders\FBX.hlsli">
@@ -447,6 +450,9 @@
     </ClInclude>
     <ClInclude Include="VolumeManager\VolumeManager.h">
       <Filter>VolumeManager</Filter>
+    </ClInclude>
+    <ClInclude Include="BossParts.h">
+      <Filter>Boss</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
