--- a/MyGame/MyGame.vcxproj.filters
+++ b/MyGame/MyGame.vcxproj.filters
@@ -253,6 +253,9 @@
     <ClCompile Include="BossParts.cpp">
       <Filter>Boss</Filter>
     </ClCompile>
+    <ClCompile Include="Transform.cpp">
+      <Filter>Math</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\shaders\FBX.hlsli">
@@ -453,6 +456,9 @@
     </ClInclude>
     <ClInclude Include="BossParts.h">
       <Filter>Boss</Filter>
+    </ClInclude>
+    <ClInclude Include="Transform.h">
+      <Filter>Math</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
