音量調整クラスを作成し、exturnで宣言していた変数を一部削除

--- a/MyGame/MyGame.vcxproj
+++ b/MyGame/MyGame.vcxproj
@@ -121,7 +121,7 @@
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
-      <AdditionalIncludeDirectories>$(ProjectDir)FBX;$(ProjectDir)OBJ;$(ProjectDir)Particle;$(ProjectDir)PostEffect;$(ProjectDir)Sound;$(ProjectDir)Input;$(ProjectDir)Camera;$(ProjectDir)Sprite;$(ProjectDir)DebugText;$(ProjectDir)EngineBase;$(ProjectDir)GamePlay;$(ProjectDir)GameBase;$(ProjectDir)Math;$(ProjectDir)ScoreText;$(ProjectDir)Boss;$(ProjectDir)Bullet;$(ProjectDir)StageObject;$(ProjectDir)Player;$(ProjectDir)Title;$(ProjectDir)Result;$(ProjectDir)ScoreManager;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)FBX;$(ProjectDir)OBJ;$(ProjectDir)Particle;$(ProjectDir)PostEffect;$(ProjectDir)Sound;$(ProjectDir)Input;$(ProjectDir)Camera;$(ProjectDir)Sprite;$(ProjectDir)DebugText;$(ProjectDir)EngineBase;$(ProjectDir)GamePlay;$(ProjectDir)GameBase;$(ProjectDir)Math;$(ProjectDir)ScoreText;$(ProjectDir)Boss;$(ProjectDir)Bullet;$(ProjectDir)StageObject;$(ProjectDir)Player;$(ProjectDir)Title;$(ProjectDir)Result;$(ProjectDir)ScoreManager;$(ProjectDir)VolumeManager;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <TreatWarningAsError>false</TreatWarningAsError>
     </ClCompile>
@@ -142,7 +142,7 @@
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>false</ConformanceMode>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <AdditionalIncludeDirectories>$(ProjectDir)FBX;$(ProjectDir)OBJ;$(ProjectDir)Particle;$(ProjectDir)PostEffect;$(ProjectDir)Sound;$(ProjectDir)Input;$(ProjectDir)Camera;$(ProjectDir)Sprite;$(ProjectDir)DebugText;$(ProjectDir)EngineBase;$(ProjectDir)GamePlay;$(ProjectDir)GameBase;$(ProjectDir)Math;$(ProjectDir)ScoreText;$(ProjectDir)Boss;$(ProjectDir)Bullet;$(ProjectDir)StageObject;$(ProjectDir)Player;$(ProjectDir)Title;$(ProjectDir)Result;$(ProjectDir)ScoreManager;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)FBX;$(ProjectDir)OBJ;$(ProjectDir)Particle;$(ProjectDir)PostEffect;$(ProjectDir)Sound;$(ProjectDir)Input;$(ProjectDir)Camera;$(ProjectDir)Sprite;$(ProjectDir)DebugText;$(ProjectDir)EngineBase;$(ProjectDir)GamePlay;$(ProjectDir)GameBase;$(ProjectDir)Math;$(ProjectDir)ScoreText;$(ProjectDir)Boss;$(ProjectDir)Bullet;$(ProjectDir)StageObject;$(ProjectDir)Player;$(ProjectDir)Title;$(ProjectDir)Result;$(ProjectDir)ScoreManager;$(ProjectDir)VolumeManager;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <TreatWarningAsError>false</TreatWarningAsError>
     </ClCompile>
